# skwhisper

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml  skwhisper.service  skwhisper@.service
config/: skwhisper.toml
scripts/: install.sh
skwhisper/: __init__.py  __main__.py  config.py  curator.py  daemon.py  patterns.py  watcher.py
skwhisper/clients/: __init__.py  ollama.py  qdrant.py  skmemory.py
tests/: test_watcher.py
